[package]
name = "machine_uuid"
version = "0.1.0"
authors = ["danebalia <dane.balia@sourcing-sa.co.za>"]
edition = "2018"
keywords = ["uuid", "machine"]
readme = "README.md"
description = "A library to retrieve a machines UUID"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/machine_uuid"
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/choicesourcing/machine_uuid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
